--- a/po/da.po
+++ b/po/da.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: 2014-02-22 23:52+0000\n"
+"PO-Revision-Date: 2014-05-07 16:41+0000\n"
 "Last-Translator: Peter <flywheel@illogical.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1393113149.0\n"
+"X-POOTLE-MTIME: 1399480892.0\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -57,7 +57,7 @@ msgstr "Virkelig terminere opgaven?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Kan ikke stoppe egen proces"
 
 #: ../src/functions.c:148
 #, c-format
@@ -203,7 +203,8 @@ msgid "translator-credits"
 msgstr ""
 "Joe Hansen, 2010\n"
 "Vidar Jon Bauge \n"
-"Charlie Tyrrestrup"
+"Charlie Tyrrestrup\n"
+"Peter Jespersen"
 
 #: ../src/interface.c:401 ../src/interface.c:403
 msgid "LXTask"
