--- a/po/it.po
+++ b/po/it.po
@@ -9,19 +9,20 @@ msgstr ""
 "Project-Id-Version: xfce 4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: 2012-10-17 14:15+0200\n"
-"Last-Translator: Daniele <daniele@forsi.it>\n"
+"PO-Revision-Date: 2014-08-08 08:24+0000\n"
+"Last-Translator: Daniele Forsi <daniele@forsi.it>\n"
 "Language-Team: Italian\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.6.0-rc1\n"
+"X-POOTLE-MTIME: 1407486249.000000\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
-msgstr "Gestore task"
+msgstr "Gestore processi"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Manage running processes"
