--- a/po/de.po
+++ b/po/de.po
@@ -6,21 +6,21 @@
 # Fabian Nowak <timystery@arcor.de>, 2007.
 # Mario Blättermann <mariobl@gnome.org>, 2009.
 # Christoph Wickert <cwickert@fedoraproject.org>, 2009.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: 2012-10-13 22:36+0200\n"
-"Last-Translator: Daniel <d@winzen4.de>\n"
+"POT-Creation-Date: 2014-09-26 01:30+0300\n"
+"PO-Revision-Date: 2014-10-29 18:03+0000\n"
+"Last-Translator: H.Humpel <H.Humpel@gmx.de>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.6.0-rc2\n"
+"X-POOTLE-MTIME: 1414605832.000000\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -33,6 +33,10 @@ msgstr "Laufende Prozesse verwalten"
 #: ../lxtask.desktop.in.h:3
 msgid "Process manager"
 msgstr "Prozessverwaltung"
+
+#: ../data/lxtask.desktop.in.h:4
+msgid "task;kill;suspend;processor;memory;monitoring;performance;"
+msgstr "Anwendung;kill;aussetzen;Prozessor;Speicher;Überwachung;Leistung;"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
