--- a/po/gl.po
+++ b/po/gl.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: 2014-11-27 09:40+0000\n"
+"POT-Creation-Date: 2014-09-26 01:30+0300\n"
+"PO-Revision-Date: 2014-11-27 09:46+0000\n"
 "Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Proxecto Trasno <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.6.0-rc2\n"
-"X-POOTLE-MTIME: 1417081219.000000\n"
+"X-POOTLE-MTIME: 1417081612.000000\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -29,6 +29,10 @@ msgstr "Xestionar os procesos en execución"
 #: ../lxtask.desktop.in.h:3
 msgid "Process manager"
 msgstr "Xestor de procesos"
+
+#: ../data/lxtask.desktop.in.h:4
+msgid "task;kill;suspend;processor;memory;monitoring;performance;"
+msgstr "tarefa;matar;suspender;procesador;memoria;monitorización;rendemento;"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
@@ -174,7 +178,7 @@ msgstr "Amosar as tarefas do usuario"
 
 #: ../src/interface.c:340
 msgid "Show root tasks"
-msgstr "Amosar as tarefas de administrador (root)"
+msgstr "Amosar as tarefas do administrador (root)"
 
 #: ../src/interface.c:345
 msgid "Show other tasks"
@@ -215,7 +219,7 @@ msgstr "Copyright (C) 2008 equipo LXDE"
 
 #: ../src/interface.c:407
 msgid "Lightweight task manager for LXDE project"
-msgstr "Administrador de tarefas lixeiro para o escritorio LXDE"
+msgstr "Administrador de tarefas lixeiro para o proxecto LXDE"
 
 #: ../src/interface.c:635
 msgid "Preferences"
