--- a/po/is.po
+++ b/po/is.po
@@ -1,32 +1,35 @@
-# SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# Sveinn í Felli <sv1@fellsnet.is>, 2014.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2014-09-26 01:30+0300\n"
+"PO-Revision-Date: 2014-12-03 12:56+0000\n"
+"Last-Translator: Sveinn í Felli <sv1@fellsnet.is>\n"
+"Language-Team: Icelandic <translation-team-is@lists.sourceforge.net>\n"
 "Language: is\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.10.0\n"
+"X-Generator: Lokalize 1.5\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
-msgstr ""
+msgstr "Verkefnastjóri"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Manage running processes"
-msgstr ""
+msgstr "Sýsla með keyrandi ferli"
 
 #: ../lxtask.desktop.in.h:3
 msgid "Process manager"
+msgstr "Ferlastjórnun"
+
+#: ../data/lxtask.desktop.in.h:4
+msgid "task;kill;suspend;processor;memory;monitoring;performance;"
 msgstr ""
 
 #: ../src/xfce-taskmanager-linux.c:285
@@ -44,7 +47,7 @@ msgstr ""
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Kála verkefni?"
 
 #: ../src/callbacks.c:62
 msgid "Really terminate the task?"
@@ -62,75 +65,75 @@ msgstr ""
 #: ../src/functions.c:156
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Örgjörvanotkun: %0.0f %%"
 
 #: ../src/interface.c:70
 msgid "_File"
-msgstr ""
+msgstr "_Skrá"
 
 #: ../src/interface.c:91
 msgid "_View"
-msgstr ""
+msgstr "_Skoða"
 
 #: ../src/interface.c:97
 msgid "_Help"
-msgstr ""
+msgstr "_Hjálp"
 
 #: ../src/interface.c:124
 msgid "cpu usage"
-msgstr ""
+msgstr "örgjörvanotkun"
 
 #: ../src/interface.c:135
 msgid "memory usage"
-msgstr ""
+msgstr "minnisnotkun"
 
 #: ../src/interface.c:163
 msgid "more details"
-msgstr ""
+msgstr "frekari upplýsingar"
 
 #: ../src/interface.c:189
 msgid "Command"
-msgstr ""
+msgstr "Skipun"
 
 #: ../src/interface.c:195
 msgid "User"
-msgstr ""
+msgstr "Notandi"
 
 #: ../src/interface.c:204
 msgid "CPU%"
-msgstr ""
+msgstr "CPU%"
 
 #: ../src/interface.c:210
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
 #: ../src/interface.c:216
 msgid "VM-Size"
-msgstr ""
+msgstr "VM-stærð"
 
 #: ../src/interface.c:222
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 #: ../src/interface.c:228
 msgid "State"
-msgstr ""
+msgstr "Staða"
 
 #: ../src/interface.c:234
 msgid "Prio"
-msgstr ""
+msgstr "Forg"
 
 #: ../src/interface.c:240
 msgid "PPID"
-msgstr ""
+msgstr "PPID"
 
 #: ../src/interface.c:256
 msgid "Stop"
-msgstr ""
+msgstr "Stöðva"
 
 #: ../src/interface.c:261
 msgid "Continue"
-msgstr ""
+msgstr "Halda áfram"
 
 #: ../src/interface.c:266
 msgid "Term"
@@ -142,27 +145,27 @@ msgstr ""
 
 #: ../src/interface.c:276
 msgid "Priority"
-msgstr ""
+msgstr "Forgangur"
 
 #: ../src/interface.c:289
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:294
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:299
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:304
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:309
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:335
 msgid "Show user tasks"
@@ -193,16 +196,16 @@ msgstr ""
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:392
 msgid "translator-credits"
-msgstr ""
+msgstr "Sveinn í Felli, sv1@fellsnet.is"
 
 #: ../src/interface.c:401 ../src/interface.c:403
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Höfundarréttur (C) 2008 LXDE teymið"
 
 #: ../src/interface.c:407
 msgid "Lightweight task manager for LXDE project"
@@ -210,20 +213,22 @@ msgstr ""
 
 #: ../src/interface.c:635
 msgid "Preferences"
-msgstr ""
+msgstr "Kjörstillingar"
 
 #: ../src/interface.c:639
 msgid "General"
-msgstr ""
+msgstr "Almennt"
 
 #: ../src/interface.c:640
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Uppfærslutíðni (sekúndur):"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Villa"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Staðfesta"
+
+
