--- a/po/tr.po
+++ b/po/tr.po
@@ -7,16 +7,16 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 23:42+0100\n"
-"PO-Revision-Date: 2013-11-05 09:53+0000\n"
-"Last-Translator: nyucel <necdetyucel@gmail.com>\n"
+"PO-Revision-Date: 2014-12-04 00:04+0000\n"
+"Last-Translator: <volkangezer@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1383645210.0\n"
+"X-Generator: Pootle 2.6.0-rc2\n"
+"X-POOTLE-MTIME: 1417651462.000000\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -200,8 +200,9 @@ msgstr ""
 #: ../src/interface.c:392
 msgid "translator-credits"
 msgstr ""
-"Mehmet Gülmen (memetgulmen@gmail.com)\n"
-"Kılıç Köken (kilickoken@gmail.com)"
+"Mehmet Gülmen <memetgulmen@gmail.com>, 2012\n"
+"Kılıç Köken <kilickoken@gmail.com>, 2012\n"
+"Volkan Gezer <volkangezer@gmail.com>, 2014"
 
 #: ../src/interface.c:401 ../src/interface.c:403
 msgid "LXTask"
