--- a/po/uk.po
+++ b/po/uk.po
@@ -15,8 +15,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.6.0-rc2\n"
 "X-POOTLE-MTIME: 1414361370.000000\n"
 
@@ -35,8 +35,8 @@ msgstr "Менеджер процесів"
 #: ../data/lxtask.desktop.in.h:4
 msgid "task;kill;suspend;processor;memory;monitoring;performance;"
 msgstr ""
-"процес;задача;програма;вбити;зупинити;процесор;пам'ять;слідкувати;продуктивні"
-"сть;швидкодія;"
+"процес;задача;програма;вбити;зупинити;процесор;пам'ять;слідкувати;"
+"продуктивність;швидкодія;"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
