--- a/po/lg.po
+++ b/po/lg.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-26 01:30+0300\n"
-"PO-Revision-Date: 2013-07-11 20:00+0000\n"
-"Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
+"PO-Revision-Date: 2015-01-17 19:58+0000\n"
+"Last-Translator:   <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1373572805.0\n"
+"X-Generator: Pootle 2.6.0-rc2\n"
+"X-POOTLE-MTIME: 1421524729.000000\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -34,6 +34,8 @@ msgstr "Ekiteekateeka emirimu"
 #: ../data/lxtask.desktop.in.h:4
 msgid "task;kill;suspend;processor;memory;monitoring;performance;"
 msgstr ""
+"mulimu;komya mbagirawo;guyimirire kulinda kiragiro;kitundu "
+"ekibazi;gwanika;kulabiriza;kukuluusana;"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
@@ -71,7 +73,7 @@ msgstr "Ggwanika: MB %d ku MB %d ze zikozesebwa"
 #: ../src/functions.c:156
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr "Okukulusana kw'ekitundu ekibazi: %% %0.0f"
+msgstr "Okukulusana kw'ekitundu ekibazi: %0.0f %%"
 
 #: ../src/interface.c:70
 msgid "_File"
@@ -107,7 +109,7 @@ msgstr "Mukozesa"
 
 #: ../src/interface.c:204
 msgid "CPU%"
-msgstr "%ky'ekibazi"
+msgstr "% ky'ekibazi"
 
 #: ../src/interface.c:210
 msgid "RSS"
