--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -9,15 +9,16 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-26 01:30+0300\n"
-"PO-Revision-Date: 2012-10-26 02:45+0200\n"
-"Last-Translator: Walter <wwycheuk@gmail.com>\n"
+"PO-Revision-Date: 2015-03-21 00:22+0000\n"
+"Last-Translator: <wwycheuk@gmail.com>\n"
 "Language-Team: Tradictional Chinese <zh-l10n@linux.org.tw>\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.6.0-rc2\n"
+"X-POOTLE-MTIME: 1426897359.000000\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -32,8 +33,9 @@ msgid "Process manager"
 msgstr "程式管理員"
 
 #: ../data/lxtask.desktop.in.h:4
+#, fuzzy
 msgid "task;kill;suspend;processor;memory;monitoring;performance;"
-msgstr ""
+msgstr "task;kill;suspend;processor;memory;monitoring;performance;"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
