Update copyright year

--- a/po/da.po
+++ b/po/da.po
@@ -218,7 +218,7 @@ msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
-msgid "Copyright (C) 2008 LXDE team"
+msgid "Copyright (C) 2008-2023 LXDE team"
 msgstr "Ophavsret (C) 2008 LXDE-holdet"
 
 #: ../src/interface.c:407
