--- a/po/frp.po
+++ b/po/frp.po
@@ -213,7 +213,7 @@ msgstr "LXTahchi"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
-msgid "Copyright (C) 2008 LXDE team"
+msgid "Copyright (C) 2008-2023 LXDE team"
 msgstr "Drét de Copie / Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:407
