--- a/po/he.po
+++ b/po/he.po
@@ -213,7 +213,7 @@ msgstr "מנהל המשימות LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
-msgid "Copyright (C) 2008 LXDE team"
+msgid "Copyright (C) 2008-2023 LXDE team"
 msgstr "כל הזכויות שמורות (C) ‏2008 צוות LXDE"
 
 #: ../src/interface.c:407
