--- a/po/pt.po
+++ b/po/pt.po
@@ -215,7 +215,7 @@ msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
-msgid "Copyright (C) 2008 LXDE team"
+msgid "Copyright (C) 2008-2023 LXDE team"
 msgstr "Direitos de autor (C) 2008 A equipa LXDE"
 
 #: ../src/interface.c:407
