--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -213,8 +213,8 @@ msgstr "Praćenje sistema"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
-msgid "Copyright (C) 2008 LXDE team"
-msgstr "LIks-DE tim — 2008-2009. Neka su prava zadržana."
+msgid "Copyright (C) 2008-2023 LXDE team"
+msgstr "LIks-DE tim — 2008-2023. Neka su prava zadržana."
 
 #: ../src/interface.c:407
 msgid "Lightweight task manager for LXDE project"
