--- a/po/ur_PK.po
+++ b/po/ur_PK.po
@@ -218,7 +218,7 @@ msgstr "ایل ایکس ٹاسک"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
-msgid "Copyright (C) 2008 LXDE team"
+msgid "Copyright (C) 2008-2023 LXDE team"
 msgstr "کاپی رائٹ (C) 2008 ایل ایکس ڈی ای ٹیم"
 
 #: ../src/interface.c:407
