--- a/po/lxtask.pot
+++ b/po/lxtask.pot
@@ -3,17 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-27 14:16+0100\n"
+"POT-Creation-Date: 2023-07-16 10:35+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../data/lxtask.desktop.in.h:1 ../src/interface.c:67
@@ -204,7 +205,7 @@ msgid "LXTask"
 msgstr ""
 
 #: ../src/interface.c:419
-msgid "Copyright (C) 2008-2020 LXDE team"
+msgid "Copyright (C) 2008-2023 LXDE team"
 msgstr ""
 
 #: ../src/interface.c:420
