Update German translation

--- a/po/de.po
+++ b/po/de.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-27 14:16+0100\n"
-"PO-Revision-Date: 2020-10-27 15:57+0100\n"
+"POT-Creation-Date: 2023-07-16 10:35+0200\n"
+"PO-Revision-Date: 2023-07-16 10:40+0200\n"
 "Last-Translator: Ingo Brückl <ib@wupperonline.de>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "Language: de\n"
@@ -216,7 +216,8 @@ msgstr ""
 "Enrico Tröger <enrico.troeger@uvena.de>, 2006.\n"
 "Fabian Nowak <timystery@arcor.de>, 2007.\n"
 "Mario Blättermann <mariobl@gnome.org>, 2008.\n"
-"Christoph Wickert <cwickert@fedoraproject.org>, 2009."
+"Christoph Wickert <cwickert@fedoraproject.org>, 2009.\n"
+"Ingo Brückl"
 
 #: ../src/interface.c:413 ../src/interface.c:415
 msgid "LXTask"
