--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,5 @@ Johannes Zellner <webmaster@nebulon.de>
 On 2008-04-26, the LXDE team derive LXTask from 
 Xfce4 Task Manager for LXDE project.
 Copyright (C) 2008 Hong Jen Yee (PCMan) <pcman.tw@gmail.com>
+
+Ingo Brückl
