Remove the percent sign from the title of the CPU column
There is a percent sign after each number in the column,
which should clarify the column's meaning.

--- a/po/af.po
+++ b/po/af.po
@@ -106,8 +106,8 @@ msgid "User"
 msgstr "Gebruiker"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "SVE%"
+msgid "CPU"
+msgstr "SVE"
 
 #: ../src/interface.c:238
 msgid "RSS"
