--- a/po/es.po
+++ b/po/es.po
@@ -109,8 +109,8 @@ msgid "User"
 msgstr "Usuario"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "% CPU"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
