--- a/po/sq.po
+++ b/po/sq.po
@@ -104,8 +104,8 @@ msgid "User"
 msgstr "Përdorues"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "CPU%"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
