--- a/po/tt_RU.po
+++ b/po/tt_RU.po
@@ -105,8 +105,8 @@ msgid "User"
 msgstr "Кулланучы"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "CPU%"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
