--- a/po/fo.po
+++ b/po/fo.po
@@ -106,8 +106,8 @@ msgid "User"
 msgstr "Brúkari"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "CPU%"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
