--- a/po/hu.po
+++ b/po/hu.po
@@ -108,8 +108,8 @@ msgid "User"
 msgstr "Felhasználó"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "CPU%"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
