--- a/po/pt.po
+++ b/po/pt.po
@@ -110,8 +110,8 @@ msgid "User"
 msgstr "Utilizador"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "CPU %"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
