--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -111,8 +111,8 @@ msgid "User"
 msgstr "Usuário"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "CPU%"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
