--- a/po/ru.po
+++ b/po/ru.po
@@ -110,8 +110,8 @@ msgid "User"
 msgstr "Пользователь"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "CPU%"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
