--- a/po/sr.po
+++ b/po/sr.po
@@ -107,8 +107,8 @@ msgid "User"
 msgstr "Корисник"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "% Процесор"
+msgid "CPU"
+msgstr "Процесор"
 
 #: ../src/interface.c:238
 msgid "RSS"
