--- a/po/uk.po
+++ b/po/uk.po
@@ -109,8 +109,8 @@ msgid "User"
 msgstr "Користувач"
 
 #: ../src/interface.c:227
-msgid "CPU%"
-msgstr "CPU%"
+msgid "CPU"
+msgstr "CPU"
 
 #: ../src/interface.c:238
 msgid "RSS"
