--- a/po/de.po
+++ b/po/de.po
@@ -234,8 +234,8 @@ msgid "LXTask"
 msgstr "LXTask"
 
 #: ../src/interface.c:473
-msgid "Copyright (C) 2008-2024 LXDE team"
-msgstr "Copyright (C) 2008-2024 LXDE-Team"
+msgid "Copyright (C) 2008-2025 LXDE team"
+msgstr "Copyright © 2008–2025 LXDE-Team"
 
 #: ../src/interface.c:474
 msgid "Lightweight task manager for LXDE project"
